[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main_UI_Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Start Menu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Courier Prime.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/Menu SFX.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[node name="Start Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.5
margin_top = -52.5
margin_right = 210.5
margin_bottom = 168.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="VBoxContainer" groups=["menu_buttons"]]
margin_right = 421.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( -777, -306 )
size_flags_vertical = 3
text = "Start"
expand_icon = true

[node name="LeveSellectButton" type="Button" parent="VBoxContainer" groups=["menu_buttons"]]
margin_top = 56.0
margin_right = 421.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( -777, -306 )
size_flags_vertical = 3
text = "Levels"

[node name="OptionButton" type="Button" parent="VBoxContainer" groups=["menu_buttons"]]
margin_top = 112.0
margin_right = 421.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( -777, -306 )
size_flags_vertical = 3
text = "Options"

[node name="QuitButon" type="Button" parent="VBoxContainer" groups=["menu_buttons"]]
margin_top = 168.0
margin_right = 421.0
margin_bottom = 221.0
rect_pivot_offset = Vector2( -777, -306 )
size_flags_vertical = 3
text = "Ragequit"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -379.0
margin_top = 242.0
margin_right = 379.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "I Lost My AI!"
align = 1

[node name="Menu SFX" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LeveSellectButton" to="." method="_on_LeveSellectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButon" to="." method="_on_QuitButon_pressed"]
